# ai-service-mesh

./: .gitignore  AGENTS.md  README.md  docker-compose.explanation.txt  docker-compose.yml  pyproject.toml  responsible_ai_engineer.txt
charts/ai-service-mesh/: Chart.yaml  README.md  values-canary.yaml  values-eks.yaml  values-local.yaml  values.yaml
charts/ai-service-mesh/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  limitrange.yaml  service.yaml  (+3 more)
docs/: architecture.md  demo-script-outline.md  demo-script.md  eks-porting.md  hpa-demo.md  kubeadm-bootstrap.md  kubeadm-bootstrap.sh  linkerd-injection-smoke.md  linkerd-setup.md  linkerd-traffic-split.md  linkerd-viz-dashboard.md  nginx-ingress.md  observability-setup.md  proxmox-setup.md  proxmox-setup.sh  storage.md  testing.md  workflows.md
k8s/: echo-test.yaml  hpa-demo.yaml  linkerd-injection-smoke.yaml  linkerd-traffic-split.yaml  pvc-smoke.yaml
scripts/: build-ml-services.sh  caption_image.py  compare_texts.py  deploy-echo-test.sh  explanation.txt  hpa-load.sh  install-nginx-ingress.sh  rag_lite.py  render-helm.sh  route_query.py  smoke-test.sh  validate-echo-test.sh  validate-helm.sh  validate-ingress.sh
services/: README.md  __init__.py  explanation.txt
services/classifier/: Dockerfile  main.py
services/embedding/: Dockerfile  main.py
services/eval/: Dockerfile  main.py
services/gateway/: Dockerfile  main.py
services/llm/: Dockerfile  main.py
services/ml-base/: Dockerfile
services/shared/: __init__.py  rag_corpus.json  schemas.py
services/vision/: Dockerfile  main.py
