[project]
name = "ai-service-mesh"
version = "0.1.0"
description = "AI service mesh demo services"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "uvicorn>=0.27",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
